--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
           -webkit-user-select: none;
           -ms-user-select: none;
           user-select: none;
+
+          -webkit-transform-origin: 0 0;
+          -moz-transform-origin: 0 0;
+          -ms-transform-origin: 0 0;
+          -o-transform-origin: 0 0;
+          transform-origin: 0 0;
         }
         .df-thumb.active, .df-thumb:hover {
           opacity: 1;
