--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
               <ul>
                 <li>Полноэкранный режим</li>
                 <li>Возможность добавления несколько презентаций на страницу</li>
+                <li>Смена слайдов колесом мышки или стрелками (WIP)</li>
                 <li>Автоматически генерируемые превьюшки для быстрой навигации</li>
                 <li>Простая <a href="about:blank" onclick="about.slide(2); return false;">HTML-разметка</a> (каждый слайд — блок класса <strong>df-slide</strong>)</li>
                 <li>Возможность ссылаться на страницы (см. предыдущий пункт этого списка)</li>
@@ -170,7 +171,8 @@
                 <li><strong>slide(index)</strong> — перейти на слайд с номером <strong>index</strong>,
                 <li><strong>prev([offset])</strong> — перейти к предыдущему слайду (или сместиться на <strong>offset</strong> слайдов назад),
                 <li><strong>next([offset])</strong> — перейти к следующему слайду (или сместиться на <strong>offset</strong> слайдов вперёд),
-                <li><strong>resize()</strong> — обновить размеры превью после изменения размеров корневого элемента.
+                <li><strong>resize()</strong> — обновить размеры превью после изменения размеров корневого элемента,
+                <li><strong>fullscreen([toggle])</strong> — развернуть (или свернуть, в зависимости от параметра <strong>toggle</strong>) на весь экран.
               </ul>
               <h4>Свойства</h4>
               <ul>
