--- a/index.html
+++ b/index.html
@@ -142,13 +142,24 @@
               <ul>
                 <li>Полноэкранный режим</li>
                 <li>Возможность добавления несколько презентаций на страницу</li>
-                <li>Смена слайдов колесом мышки или стрелками (WIP)</li>
+                <li>Смена слайдов колесом мышки или <a href="about:blank" onclick="about.slide(2); return false;">клавишами</a></li>
                 <li>Автоматически генерируемые превьюшки для быстрой навигации</li>
-                <li>Простая <a href="about:blank" onclick="about.slide(2); return false;">HTML-разметка</a> (каждый слайд — блок класса <strong>df-slide</strong>)</li>
+                <li>Простая <a href="about:blank" onclick="about.slide(3); return false;">HTML-разметка</a> (каждый слайд — блок класса <strong>df-slide</strong>)</li>
                 <li>Возможность ссылаться на страницы (см. предыдущий пункт этого списка)</li>
-                <li>Компактный размер JS-кода (2 Кб в несжатом виде)</li>
+                <li>Компактный размер JS-кода (5.7 Кб в несжатом виде)</li>
                 <li>Минимум ограничений на оформление (у корневого элемента должны быть только дочерние блоки <strong>df-slides</strong> (и <strong>df-slide</strong> внутри), <strong>df-thumbs</strong> и <strong>df-controls</strong>, их внешний вид почти не контролируется библиотекой)</li>
               </ul>
+            </div>
+            <div class="df-slide">
+              <h4>Клавиши:</h4>
+              <ul>
+                <li><strong>→</strong>, <strong>↓</strong>, <strong>Page Down</strong>, <strong>пробел</strong> — следующий слайд,</li>
+                <li><strong>←</strong>, <strong>↑</strong>, <strong>Page Up</strong> — предыдущий слайд,</li>
+                <li><strong>1</strong>, <strong>2</strong>, <strong>3</strong>, <strong>4</strong>, <strong>5</strong>, <strong>6</strong>, <strong>7</strong>, <strong>8</strong>, <strong>9</strong>, <strong>0</strong> — переход к слайду с первого по десятый,</li>
+                <li><strong>Home</strong> — переход к первому слайду,</li>
+                <li><strong>End</strong> — переход к последнему слайду.</li>
+              </ul>
+              <p>Для обработки нажатий клавиш следует передавать соответствующее событие в метод <a href="about:blank" onclick="about.slide(5); return false;"><strong>keydown(event)</strong></a> — например, из обработчика этого события у <strong>document</strong>.</p>
             </div>
             <div class="df-slide">
               <h4>Разметка:</h4>
@@ -197,6 +208,7 @@ $<span style='color:#808030; '>(</span>document<span style='color:#808030; '>)</
                 <li><strong>prev([offset])</strong> — перейти к предыдущему слайду (или сместиться на <strong>offset</strong> слайдов назад),
                 <li><strong>next([offset])</strong> — перейти к следующему слайду (или сместиться на <strong>offset</strong> слайдов вперёд),
                 <li><strong>resize()</strong> — обновить размеры превью после изменения размеров корневого элемента,
+                <li><strong>keydown(event)</strong> — обработать событие нажатия клавиши <strong>event</strong> (содержащее поле <strong>which</strong> с кодом нажатой клавиши),
                 <li><strong>fullscreen([toggle])</strong> — развернуть (или свернуть, в зависимости от параметра <strong>toggle</strong>) на весь экран.
               </ul>
               <h4>Свойства</h4>
@@ -217,7 +229,7 @@ $<span style='color:#808030; '>(</span>document<span style='color:#808030; '>)</
             <div class="df-slide">
               <h4>TODO</h4>
               <ul>
-                <li>Автоматический скроллинг списка слайдов</li>
+                <li><s>Автоматический скроллинг списка слайдов</s></li>
                 <li><s>Полноэкранный режим</s></li>
                 <li>Всплывающие панели в полноэкранном режиме</li>
                 <li><s>Переход по нажатиям клавиш (вправо, влево, пробел)</s></li>
