added link to the source

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
               <center style="padding-top: 60px">
                 <h2>Диафильм</h2>
                 <p class="lead">JavaScript-библиотека для показа простых презентаций</p>
-                <p style="margin-top: 200px">Денис Ольшин<br/><a href="http://denull.ru/" target="_blank">denull.ru</a></p>
+                <p><a href="http://github.com/deNULL/Diafilm.JS" target="_blank">http://github.com/deNULL/Diafilm.JS</a></p>
+                <p style="margin-top: 140px">Денис Ольшин<br/><a href="http://denull.ru/" target="_blank">denull.ru</a></p>
               </center>
             </div>
             <div class="df-slide">
