--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <li><strong>Home</strong> — переход к первому слайду,</li>
                 <li><strong>End</strong> — переход к последнему слайду.</li>
               </ul>
-              <p>Для обработки нажатий клавиш следует передавать соответствующее событие в метод <a href="about:blank" onclick="about.slide('aboutKeys'); return false;"><strong>keydown(event)</strong></a> — например, из обработчика этого события у <strong>document</strong>.</p>
+              <p>Для обработки нажатий клавиш следует передавать соответствующее событие в метод <a href="about:blank" onclick="about.slide('aboutAPI'); return false;"><strong>keydown(event)</strong></a> — например, из обработчика этого события у <strong>document</strong>.</p>
             </div>
             <div class="df-slide" id="aboutHTML">
               <h4>Разметка:</h4>
