--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@ $<span style='color:#808030; '>(</span>document<span style='color:#808030; '>)</
                 <li><s>Полноэкранный режим</s></li>
                 <li>Всплывающие панели в полноэкранном режиме</li>
                 <li><s>Переход по нажатиям клавиш (вправо, влево, пробел)</s></li>
+                <li>Поддержка смены URL (через History API)</li>
+                <li>Поддержка режима редактирования</li>
               </ul>
             </div>
           </div>
