--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ $<span style='color:#808030; '>(</span>document<span style='color:#808030; '>)</
               <ul>
                 <li>jQuery</li>
               </ul>
-              <p>Это демо сверстано с использование <a href="http://html5boilerplate.com/" target="_blank">HTML5 Boilerplate</a> (и, в частности, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>), но я не вижу причин, по которым без них нельзя было бы обойтись.</p>
+              <p>Это демо сверстано с использованием <a href="http://html5boilerplate.com/" target="_blank">HTML5 Boilerplate</a> (и, в частности, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>), но я не вижу причин, по которым без них нельзя было бы обойтись.</p>
             </div>
             <div class="df-slide" id="aboutTODO">
               <h4>TODO</h4>
